fix(DATA-2090): bug validation PARKING and POI CSV headers
* fix typos in POI headers
* remove handling of English headers for PARKING CSV headers because it is always in French

# Conflicts:
#	src/main/java/org/rutebanken/tiamat/general/ParkingsCSVHelper.java